public enum Categoria {
    BASICO,
    CONFORTO,
    PREMIO;
}
