public class Telefone {
    private String codicoDeArea; 
    private String numero;
    
    //#region getters e setters
    public String getCodicoDeArea() {
        return codicoDeArea;
    }

    public void setCodicoDeArea(String codicoDeArea) {
        this.codicoDeArea = codicoDeArea;
    }

    public String getNumero() {
        return numero;
    }

    public void setNumero(String numero) {
        this.numero = numero;
    }
    //#endregion
    
}
