@startuml cinema
package "registro"{
    
    enum acesso{
            ADM 
            CLIENTE 
    }

    class usuario{
        

        login:String
        senha:String
        acesso:Acesso
    }
    class carro{
    - id:integer 
    - nome:string
    - placa:string
    - dataDeAquisicao:date
    - ano:int
    - modelo:String
    }
    ' ok 
    enum cor{
        -PRETO 
        -VERMELHO
        -BRANCO
        -PRATA
    }
    'ok
    /'
    class carroEletrico{
        capacidadeBateria:float
        eficiencia
    }
    class carroAConbustao {
        
    }

    '/
    class locacao{
        # idlocacao:int 
        # datalocacao:date
        # dataDevolucao:date
        # calcularvalor():void
    }
    'ok
    class locacaodiaria{
        - valordadiaria:float   
        - quantidadeDias:int
        - calcularvalor():void
    }
    'ok
    class locacaoextendida{
        - quantidadeMeses : int
        - calcularvalor():void
    }
    'ok
    class cliente {
        - id:int
        - nome:String
        - cpf:String
        - email:String
    }
    enum categoria {
        - BASICO
        - CONFORTO
        - PREIMIO
    }
    'ok
    class Telefone{
        -codicoDeArea:string
        -numero:string
    }

    locacao<|--  locacaodiaria 
    locacao<|--  locacaoextendida 


    carro "1" --> "1"categoria
    carro "1" --> "1"cor

    usuario "1" o--> "1" acesso
    cliente "1" --> "1"usuario

    locacao "1" --> "1"carro


    cliente "1" --> "2" Telefone
    cliente "1" --> "*" locacao

}

@enduml